--- a/web-store/public/index.html
+++ b/web-store/public/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="Description" content="Author: I.O. Kolyasnikov,
-    Category: Сlothes, Length: 5 pages">
+    <meta name="Description" content="Author: I.O. Kolyasnikov, Category: Сlothes, Length: 5 pages">
     <title>Home</title>
   </head>
   <body>
